# Ma_Siggil

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/: cont_train.py  test.py  train.py  val.py
src/: __init__.py  config.py  data_utils.py  metrics_losses.py  models.py
